--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,7 +19,7 @@
     //"password": "password",
     "port": "2222",
     
-    "remote_path": "/home1/gapoorva/www/new/",
+    "remote_path": "/home1/gapoorva/www/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
