--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "child_process": "^1.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.5.0",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "path": "^0.12.7",
     "serve-favicon": "~2.4.2"
   }
 }
